# Micromouse_Challenge

./: README.md
bags/run_20260617_143340/: metadata.yaml
bags/run_20260621_124632/: metadata.yaml  run_log_20260621_124632.txt
bags/run_20260622_154832/: metadata.yaml
bags/run_20260622_163141/: metadata.yaml
bags/run_20260622_170002/: metadata.yaml
src/micromouse_control/: CMakeLists.txt  package.xml
src/micromouse_control/config/: controllers.yaml
src/micromouse_control/include/micromouse_control/: pid.hpp
src/micromouse_control/src/: pid_controller_node.cpp
src/micromouse_description/: CMakeLists.txt  package.xml
src/micromouse_description/rviz/: view_robot.rviz
src/micromouse_description/urdf/: micromouse.urdf.xacro
src/micromouse_msgs/: CMakeLists.txt  package.xml
src/micromouse_msgs/msg/: MotionSetpoint.msg
src/micromouse_simulation/: CMakeLists.txt  package.xml
src/micromouse_simulation/config/: bridge.yaml
src/micromouse_simulation/config/rviz/: maze_viz.rviz
src/micromouse_simulation/launch/: sim.launch.py  view_robot.launch.py
src/micromouse_simulation/scripts/: analyze_run.py  generate_maze.py
src/micromouse_simulation/worlds/: maze_16x16.json  maze_16x16.sdf
src/micromouse_solver/: CMakeLists.txt  package.xml
src/micromouse_solver/include/micromouse_solver/: floodfill.hpp
src/micromouse_solver/src/: solver_node.cpp
